--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -43,7 +43,7 @@
   },
   {
     "title": "everyday.dev",
-    "description": "A platform where developers with knowledge through collaboration and discussion.",
+    "description": "A platform where developers engage with knowledge through collaboration and discussion.",
     "lang": "PHP",
     "url": "https://github.com/DGoiana/everyday.dev",
     "favorite": true
